# wsipc

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: client.py  server.py
wsipc/: __init__.py  client.py  enums.py  server.py  utils.py
